# borsar

./: .flake8  .gitignore  .travis.yml  LICENSE  README.md  codecov.yml  environment.yml  pyproject.toml  setup.py
.circleci/: config.yml
borsar/: __init__.py  _heatmap.py  _mne_020_modified.py  _mne_compat.py  _mne_modified.py  _mne_pre_020_modified.py  _viz3d.py  _vizutils.py  channels.py  cluster.py  cluster_numba.py  clusterutils.py  csd.py  freq.py  project.py  src.py  stats.py  utils.py  viz.py
borsar/cluster/: __init__.py  _viz3d.py  checks.py  label.py  label_numba.py  obj.py  stats.py  utils.py  viz.py
borsar/cluster/tests/: test_cluster.py  test_clustering.py
borsar/data/: G_and_H_matrices.mat  cluster_regr_test_01.mat  erp_data.mat  ft_stat_test_01.mat  rest_sample_data-raw.fif
borsar/tests/: test_aa.py  test_channels.py  test_cluster.py  test_csd.py  test_freq.py  test_project.py  test_stats.py  test_utils.py  test_viz.py
docs/: Makefile  api.rst  conf.py  index.rst  make.bat
docs/_static/: style.css
docs/_templates/: layout.html
docs/whatsnew/: v0.2.0.rst
examples/: plot_cluster_viz.py
