[project]
name = "borsar"
version = "0.2"
description = "tools for electrophysiological analysis, especially cluster-based tests."
maintainers = [
    { name = "Mikołaj Magnuski", email = "mmagnuski@swps.edu.pl" },
]

license = { text = "BSD-3-Clause" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
keywords = [
    "neuroscience",
    "neuroimaging",
    "MEG",
    "EEG",
    "brain",
]

dependencies = [
    "numpy >= 1.15.4",
    "scipy >= 1.7.1",
    "matplotlib >= 3.5.0",
    "pandas",
    "scikit-image",
    "mne >= 1.0.0",
    "tqdm",
    "h5io",
    "h5py"
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/mmagnuski/borsar"
